adjust small text

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       </p>
     </div>
     <div id="contacts">
-      <p>
+      <p class="contacts-text">
         My da made this for me.. so if you have any questions or suggestions etc. get in touch with him...Aoife out!!XXX :)
       </p>
             <a class="socials" href="https://www.facebook.com/david.mullally.7"><i class="fa-brands fa-facebook fa-2x"></i></a>
