add correct link to wishlist

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <!-- Nav Bar -->
     <div>
         <div class="title-background"><img class="unicorn" src="images/Aoife-images/unicorn.webp"></div>
+        </div>
         <nav class="navbar navbar-custom navbar-expand-lg navbar-light">
             <a class="navbar-brand" href=""><img class="navbar-brand-image" src="images/Aoife-images/aoife-facepalm.png"><p class="navbar-brand-title">Aoife ♀<span class="navbar-brand-aside">The Baby Formerly Known as Teo ♂</span></p></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -161,12 +162,13 @@
     <div id="events">
       <p>
         My mom and dad are throwing me a party and we'd love if you could all be there! All you need to bring is yourself :).<br>Food and drinks
-        will be provided. <br> If you do wish to bring a gift and need inspiration, you'll find a link to a list below. :)
+        will be provided. <br> If you still wish to bring a gift, even though it's not necessary, and need inspiration, you'll find a link to a list below.
+        Seeing you all is what's important :)
       </p>
       <img class="invitation" src="images/Aoife-images/invitation.png">
       <div>
         <a class="baby-shower-options" href="mailto:mullallydavid7@gmail.com?subject=feedback">RSVP</a>
-        <a class="baby-shower-options" href="https://www.amazon.de/-/en/baby-reg/homepage/?_encoding=UTF8&ref_=sv_wl_3">Gift Ideas</a>
+        <a class="baby-shower-options" href="https://www.amazon.de/baby-reg/maria-pimentel-david-mullally-mrz-2023-dsseldorf/2D3AX8FCHJYJ2">Gift Ideas</a>
       </div>
       <p class="ps">
         * Also.. I am growing faster than inflation so if you happen to have any baby clothes, toys etc that you would wish to donate,
